@@ -1,3 +1,4 @@
+Lithosphere-Aesthenosphere boundary linked in the middle and handled for the subduction case (and disappears in most other cases)
 Moved "full density meter" icon arrow to the right.
 # 0.00.45 (65376) Jun 21, 2012
 # 0.00.44 (65375) Jun 21, 2012
